test-results/trace_1.err
examples/trace_1.c:41:2: error: expected identifier or ‘(’ before ‘{’ token
   41 | }{ fputs("Exiting: my_function\n", stderr); }
      |  ^
